[gd_scene load_steps=2 format=3 uid="uid://c7mnlvgsin1u4"]

[ext_resource type="Script" uid="uid://6iu17774sklt" path="res://addons/quest_weaver/ui/node_properties/random_node_editor.gd" id="1_e2mbk"]

[node name="RandomNodeEditor" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_e2mbk")

[node name="AddOutputButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Add Output"

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Random Outputs"

[node name="OutputsContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
